# db-to-ml-pipeline

./: DataOrganizer.py  Dockerfile  README.md  buildDockerDB.sh  clean_and_prep.sh  dockerCleanup.sh  org_for_model.py  pyproject.toml  requirements.txt
CSV-tables/: assignments-table.csv  assignmenttype-table.csv  courses-table.csv  professors-table.csv  prompts-table.csv  registration-table.csv  rubric_indep_questions.csv  sections-table.csv  student-table.csv  studentanswers-scores-test.csv  studentanswers-table.csv
Clean_and_org/: clean_csv.py  csv-insert-convert.py  find_replacers.py  gen_assignments.py  gen_student_answers.py  gen_student_answers2.py  name-stand-ins.csv  tnsnames.ora
DBSetupScripts/: 0_defineDB.sql  1_insertStudentsData.sql  2_insertProfessorsData.sql  3_insertCoursesData.sql  4_insertAssignmentTypesData.sql  5_insertPromptsData.sql  6_insertSectionsData.sql  7_insertRegistrationData.sql  8_insertAssignmentsData.sql  9_insertStudentAnswersData.sql
