[tool.poetry]
name = "db-to-ml-pipeline"
package-mode = false
version = "0.1.0"
description = "A demo pipeline for arbitrary machine learning model, utilizing Docker."
authors = ["Martin Reid <lmreid1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
oracledb = "2.5.0"
pandasql = "0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
